[package]
name = "rust-memory-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
winapi = { version = "0.3.9", features = ["winnt", "memoryapi", "processthreadsapi", "handleapi", "errhandlingapi"] }
clap = { version = "4.5", features = ["derive"] }
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_System", "Win32_System_Memory", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_Threading", "Win32_System_ProcessStatus"]}
rayon = "1.10.0"
anyhow = "1.0.98"
